--- a/assets/styles/globals.css
+++ b/assets/styles/globals.css
@@ -94,3 +94,11 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* Uploadthing button text override */
+html.dark .upload-field .text-white {
+  color: #fff !important;
+}
+html.light .upload-field .text-white {
+  color: #000 !important;
+}
